# password_manager

./: .gitignore  Cargo.toml  Readme.md
PMfiles/: safe.pswd
frontend/: package-lock.json
frontend/main/: background.ts
frontend/renderer/: tailwind.config.js
frontend/renderer/components/: loadingSpinner.tsx
frontend/renderer/pages/: _app.tsx  home.tsx
src/: entry.rs  helper.rs  main.rs  password_manager.rs
