[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
base64 = "0.21.5"
copypasta = "0.10.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rpassword = "7.3.1"
sha2 = "0.10.8"
sha256 = "1.4.0"
termion = "3.0.0"
